crates/math-core/tests/snapshots/conversion_test__align_color_ends_at_row.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align}\\color{red} a &= b \\\\ c &= d\\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mrow style="color:#FF0000;">
                    <mi>a</mi>
                </mrow>
            </mtd>
            <mtd style="text-align: left;justify-items: start;padding-left: 0;">
                <mo>=</mo>
                <mi>b</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mi>c</mi>
            </mtd>
            <mtd style="text-align: left;justify-items: start;padding-left: 0;">
                <mo>=</mo>
                <mi>d</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(2)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
