crates/math-core/tests/snapshots/conversion_test__align_rel_then_amp.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align}&x\\\\=\\;&2\\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
            </mtd>
            <mtd style="text-align: left;justify-items: start;padding-left: 0;">
                <mi>x</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mo lspace="0" rspace="0">=</mo>
                <mspace width="0.2777778em"/>
            </mtd>
            <mtd style="text-align: left;justify-items: start;padding-left: 0;">
                <mn>2</mn>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(2)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
