crates/math-core/tests/snapshots/conversion_test__align_star.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align*}x&=1\\\\y=2\\end{align*}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mi>x</mi>
            </mtd>
            <mtd style="text-align: left;justify-items: start;padding-left: 0;">
                <mo>=</mo>
                <mn>1</mn>
            </mtd>
            <mtd style="width: 50%"></mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mi>y</mi>
                <mo>=</mo>
                <mn>2</mn>
            </mtd>
            <mtd style="width: 50%"></mtd>
        </mtr>
    </mtable>
</math>
