crates/math-core/tests/snapshots/conversion_test__and_between_letters.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\And x"
---
<math>
    <mi>x</mi>
    <mspace width="0.2777778em"/>
    <mo lspace="0.2778em" rspace="0.2778em">&amp;</mo>
    <mspace width="0.2777778em"/>
    <mi>x</mi>
</math>
