crates/math-core/tests/snapshots/conversion_test__array_lines.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{array}{ |l| |rc| } 10 & 20 & 30\\\\ 4 & 5 & 6 \\end{array}"
---
<math>
    <mtable style="border-left: 0.05em solid currentcolor" displaystyle="false" scriptlevel="0">
        <mtr>
            <mtd style="text-align: left;justify-items: start;border-right: 0.05em solid currentcolor;">
                <mn>10</mn>
            </mtd>
            <mtd style="border-right: 0.05em solid currentcolor;padding-left: 0.1em;padding-right: 0.1em;"></mtd>
            <mtd style="text-align: right;justify-items: end;">
                <mn>20</mn>
            </mtd>
            <mtd style="border-right: 0.05em solid currentcolor;">
                <mn>30</mn>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="text-align: left;justify-items: start;border-right: 0.05em solid currentcolor;">
                <mn>4</mn>
            </mtd>
            <mtd style="border-right: 0.05em solid currentcolor;padding-left: 0.1em;padding-right: 0.1em;"></mtd>
            <mtd style="text-align: right;justify-items: end;">
                <mn>5</mn>
            </mtd>
            <mtd style="border-right: 0.05em solid currentcolor;">
                <mn>6</mn>
            </mtd>
        </mtr>
    </mtable>
</math>
